# iot-data-training-2024

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: README.md  prepare_raw_data.py
data/samples/: fmi_observations_weather_multipointcoverage-hki-area-sample.csv  makelankatu_latest.geojson
datasamples/: 24E124136E140283.geojson  makelankatu_sample.csv  r4c_latest.geojson  r4c_sample.csv
exploration/: combine_raw_data.py  create_sensor_analysis_reports.py  sensor-clustering.py  streamlit2.py  streamlit_dashboard.py  visualize_sensor_vs_sensor.py  visualize_sensors.py
src/fvhdata/utils/: constants.py  geojson.py  parquet.py
temp/: timeseries_analyser.py
