[project]
name = "iot-data-training-2024"
description = "Time series analysis toolkit for environmental sensor data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dynamic = ["version"]

dependencies = [
    # Core data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",

    # Time series analysis
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "tensorflow>=2.14.0",  # For LSTM models

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",

    # Geospatial analysis
    "folium>=0.14.0",
    "geopandas>=0.14.0",

    # Data validation and processing
    "great-expectations>=0.17.0",  # For data quality checks
    "pyarrow>=14.0.0",  # For efficient data storage
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "ruff",
    "pre-commit",
    "jupyter",
    "notebook",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = ['py311', 'py312']
exclude = ["docs/*.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ["sensor_analysis"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=sensor_analysis --cov-report=term-missing"
